# probixi

./: .gitattributes  .gitignore  .readthedocs.yml  CITATION.cff  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: apptainer.yml  cov.yml  format.yml  publish.yml
deploy/: README.md  probixi.def
deploy/modulefile/: probixi.lua
docs/: conf.py  index.rst  requirements.txt
docs/assets/: citation.bib
docs/modules/: probixi.rst
docs/overview/: indexing.md  io.md  peakfinding.md
docs/vignettes/: bad_diffraction.md  getting_started.md  good_diffraction.md
probixi/: __init__.py  cli.py  multigpu.py  probixi.py
probixi/indexer/: __init__.py  forward.py  indexer.py  integrate.py  lattice.py  predict.py  refine.py  rocking.py  seed.py
probixi/io/: __init__.py  assemble.py  cell.py  cxi.py  db.py  frames.py  geometry.py  metadata.py  visualize.py  writer.py
probixi/peakfinding/: __init__.py
probixi/peakfinding/noise/: __init__.py  _diagnostics.py  _drift.py  _eigen_background.py  _panel.py  _pixel.py  _radial.py  calibrate.py  model.py  scale.py
probixi/peakfinding/peaks/: __init__.py  blobs.py  neighborhood.py  peakfinder.py
tests/: conftest.py  sim.py  test_cell.py  test_citation.py  test_cxi.py  test_db.py  test_forward.py  test_geometry.py  test_indexing.py  test_io.py  test_lattice.py  test_mask.py  test_multigpu.py  test_noise.py  test_peakfinding.py  test_pipeline_cli.py  test_predict_integrate.py  test_seed_refine.py  test_stream.py  test_visualize.py  test_writer_format.py
tests/fixtures/: Eiger4M.geom  MultiPanel.geom  bR.cell
