[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "probixi"
version = "0.3.0"
description = "Self-Calibrating Probabilistic Peak Finding for Serial X-Ray Crystallography"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

keywords = ["peak finding", "x-ray crystallography", "probabilistic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

authors = [
    {name = "Ryan O'Dea", email = "ryan.odea@psi.ch"}
]
maintainers = [
    {name = "Ryan O'Dea", email = "ryan.odea@psi.ch"}
]

dependencies = [
    "click",
    "h5py",
    "hdf5plugin",
    "numpy",
    "torch",
    "matplotlib",
    "pillow",
    "duckdb",
]

[project.scripts]
probixi = "probixi.cli:main"

[project.optional-dependencies]
docs = [
    "myst-parser",
    "piccolo_theme",
    "sphinx",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
]
dev = [
    "ruff",
    "isort",
    "black",
    "pytest",
    "probixi[docs]"
    ]

[project.urls]
Homepage = "https://github.com/ryan-odea/probixi"
Repository = "https://github.com/ryan-odea/probixi"
"Bug Tracker" = "https://github.com/ryan-odea/probixi/issues"
"Ryan O'Dea (ORCID)" = "https://orcid.org/0009-0000-0103-9546"

[tool.hatch.build.targets.wheel]
packages = ["probixi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: end-to-end tests that simulate and process whole frames",
    "cuda: tests that require a CUDA device (skipped otherwise)",
    "mps: tests that require an Apple Silicon MPS device (skipped otherwise)",
]

[tool.pylint.typecheck]
generated-members = ["torch.*"]

[tool.pylint.messages_control]
disable = ["abstract-method", "not-callable"]
